// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`flowchart-stroke-type-field Renders \`flowchart-stroke-type-field\` with custom props 1`] = `
<div
  class="layout justify-space-between align-center"
>
  <label
    aria-hidden="true"
    class="v-label theme--light"
    style="left: 0px; position: relative;"
  >
    Custom label
  </label>
  <div
    class="flex xs3"
  >
    <div
      class="v-input mt-0 pt-0 v-input--hide-details theme--light v-text-field v-select"
    >
      <div
        class="v-input__control"
      >
        <div
          aria-expanded="false"
          aria-haspopup="listbox"
          class="v-input__slot"
          role="button"
        >
          <div
            class="v-select__slot"
          >
            <div
              class="v-select__selections"
            >
              <input
                aria-readonly="false"
                autocomplete="off"
                readonly="readonly"
                type="text"
              />
            </div>
            <div
              class="v-input__append-inner"
            >
              <div
                class="v-input__icon v-input__icon--append"
              >
                <i
                  aria-hidden="true"
                  class="v-icon notranslate material-icons theme--light"
                >
                  arrow_drop_down
                </i>
              </div>
            </div>
            <input
              type="hidden"
              value="line"
            />
          </div>
          <div
            class="v-menu"
          >
            <!---->
          </div>
        </div>
      </div>
    </div>
  </div>
</div>
`;

exports[`flowchart-stroke-type-field Renders \`flowchart-stroke-type-field\` with custom props 2`] = `
<div
  class="v-menu__content theme--light menuable__content__active "
  style="max-height: 304px; min-width: 0px; max-width: auto; top: 12px; left: 0px; transform-origin: top left; z-index: 8;"
>
  <div
    class="v-list v-select-list v-sheet theme--light theme--light"
    role="listbox"
    tabindex="-1"
  >
    <div
      aria-selected="false"
      class="v-list-item v-list-item--link theme--light"
      role="option"
      tabindex="0"
    >
      <svg
        height="4"
        width="50"
      >
        <line
          stroke="currentColor"
          stroke-width="4"
          x1="0"
          x2="100%"
          y1="0"
          y2="0"
        />
      </svg>
    </div>
    <div
      aria-selected="false"
      class="v-list-item v-list-item--link theme--light"
      role="option"
      tabindex="0"
    >
      <svg
        height="4"
        width="50"
      >
        <line
          stroke="currentColor"
          stroke-dasharray="4 4"
          stroke-width="4"
          x1="0"
          x2="100%"
          y1="0"
          y2="0"
        />
      </svg>
    </div>
  </div>
</div>
`;

exports[`flowchart-stroke-type-field Renders \`flowchart-stroke-type-field\` with default props 1`] = `
<div
  class="layout justify-space-between align-center"
>
  <label
    aria-hidden="true"
    class="v-label theme--light"
    style="left: 0px; position: relative;"
  />
  <div
    class="flex xs3"
  >
    <div
      class="v-input mt-0 pt-0 v-input--hide-details theme--light v-text-field v-select"
    >
      <div
        class="v-input__control"
      >
        <div
          aria-expanded="false"
          aria-haspopup="listbox"
          class="v-input__slot"
          role="button"
        >
          <div
            class="v-select__slot"
          >
            <div
              class="v-select__selections"
            >
              <input
                aria-readonly="false"
                autocomplete="off"
                readonly="readonly"
                type="text"
              />
            </div>
            <div
              class="v-input__append-inner"
            >
              <div
                class="v-input__icon v-input__icon--append"
              >
                <i
                  aria-hidden="true"
                  class="v-icon notranslate material-icons theme--light"
                >
                  arrow_drop_down
                </i>
              </div>
            </div>
            <input
              type="hidden"
            />
          </div>
          <div
            class="v-menu"
          >
            <!---->
          </div>
        </div>
      </div>
    </div>
  </div>
</div>
`;

exports[`flowchart-stroke-type-field Renders \`flowchart-stroke-type-field\` with default props 2`] = `
<div
  class="v-menu__content theme--light menuable__content__active "
  style="max-height: 304px; min-width: 0px; max-width: auto; top: 12px; left: 0px; transform-origin: top left; z-index: 8;"
>
  <div
    class="v-list v-select-list v-sheet theme--light theme--light"
    role="listbox"
    tabindex="-1"
  >
    <div
      aria-selected="false"
      class="v-list-item v-list-item--link theme--light"
      role="option"
      tabindex="0"
    >
      <svg
        height="4"
        width="50"
      >
        <line
          stroke="currentColor"
          stroke-width="4"
          x1="0"
          x2="100%"
          y1="0"
          y2="0"
        />
      </svg>
    </div>
    <div
      aria-selected="false"
      class="v-list-item v-list-item--link theme--light"
      role="option"
      tabindex="0"
    >
      <svg
        height="4"
        width="50"
      >
        <line
          stroke="currentColor"
          stroke-dasharray="4 4"
          stroke-width="4"
          x1="0"
          x2="100%"
          y1="0"
          y2="0"
        />
      </svg>
    </div>
  </div>
</div>
`;
